manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ldap-manager
  labels:
    app.kubernetes.io/name: ldap-manager
    app.kubernetes.io/part-of: ldap-manager
