manifests/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ldap-manager
  labels:
    app.kubernetes.io/name: ldap-manager
    app.kubernetes.io/instance: ldap-manager
    app.kubernetes.io/component: app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: ldap-manager
    app.kubernetes.io/instance: ldap-manager
    app.kubernetes.io/component: app
